fix some issues occuring on narrow screens

--- a/static/css/map.css
+++ b/static/css/map.css
@@ -7,3 +7,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+    #map {
+        margin: 0;
+        border-radius: 0;
+    }
+}
