--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,9 +98,12 @@ button {
     font-weight: bold;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     #content {
         border-radius: 0;
         margin: 0;
+    }
+    .card {
+        max-width: 90vw;
     }
 }
